syntax = "proto3";
package pt.tecnico.distledger.contract;

// Client interface of the Name Server

message RegisterRequest {
  string serviceName = 1;
  string qualifier = 2;
  string serverAddress = 3;
}

message RegisterResponse {
}
message DeleteRequest{
  string serviceName = 1;
  string serverAddress = 2;

}
message DeleteResponse{}


service NamingServerService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc delete(DeleteRequest) returns (DeleteResponse);
}
